:bug: Fixed z-index for dropdown

--- a/src/partials/modules/_dropdown.sass
+++ b/src/partials/modules/_dropdown.sass
@@ -250,6 +250,9 @@
 //           Dropdown
 //*******************************//
 
+.ts.dropdown:not(.basic)
+    z-index: $dropdown_menuZIndex
+    
 .ts.dropdown .menu 
     cursor    : auto
     position  : absolute
@@ -374,7 +377,7 @@
     padding-bottom: $dropdown_menuInputVerticalPadding
 
 //-------------------//
-//      Description       
+//    Description       
 //-------------------//
 
 .ts.dropdown > .text > .description,
